@@ -46,9 +46,11 @@ z3c.recipe.usercrontab = 1.1
 zc.recipe.cmmi = 1.3.2
 
 ## Add-ons
+archetypes.markerfield = 1.0
 collective.autopermission = 1.0b1
 collective.ATClamAV = 1.0
 collective.z3cform.datetimewidget = 1.0.2
+collective.flag = 1.2
 plone.app.discussion = 1.0b11-jarn1
 plone.app.registry = 1.0b2
 plone.app.testing = 1.0a3-jarn2
