@@ -11,6 +11,7 @@
 
   <include package="Products.CMFPlone" />
   <include package="collective.ATClamAV" />
+  <include package="collective.flag" />
   <include package="experimental.catalogqueryplan" />
   <include package="munin.zope" />
   <include package="plone.app.caching" />
