@@ -3,6 +3,7 @@
   <version>3</version>
   <dependencies>
     <dependency>profile-collective.ATClamAV:default</dependency>
+    <dependency>profile-collective.flag:default</dependency>
     <dependency>profile-plone.app.caching:default</dependency>
     <dependency>profile-plone.app.discussion:default</dependency>
     <dependency>profile-Products.PloneFormGen:default</dependency>
