@@ -11,6 +11,9 @@ Changelog
   frontpage. Closes #164.
   [hannosch]
 
+- Install collective.flag. Closes #173.
+  [tomster]
+
 1.1.3 - 2011-01-27
 ------------------
 
